--- a/assets/style.scss
+++ b/assets/style.scss
@@ -24,13 +24,14 @@ body{
     margin: 0;
     .header{
         width: 100%;
-        height: 4rem;
+        height: 3rem;
         background-color: $primary;
     }
     .main {
         background: $secondary;
         width: 80vmin;
         margin: 1rem auto;
+        padding: 0.5rem;
         .title{
             h3{
                 font-family: 'Roboto', sans-serif;
@@ -92,6 +93,11 @@ body{
                 display: grid;
                 grid-template-columns: repeat( auto-fit, minmax(100px, 1fr) );
                 text-align: left;
+                .filter-item{
+                    display: flex;
+                    align-items: center;
+                    margin: 0.5rem 0;
+                }
             }
         }
     }
@@ -104,7 +110,7 @@ body{
         background-color: #fff;
         padding: 1rem;
         
-        .row{
+        .my-row{
             display: grid;
             grid-template-columns: repeat( auto-fit, minmax(150px, 1fr) );
             place-items: center;
@@ -121,92 +127,11 @@ body{
                     background-color: $gray;
                     border-radius: 5px;
                     padding: 0.5rem;
+                    cursor: pointer;
                     img{
                         display: block;
                         margin: 0 auto;
                     }
-                }
-            }
-            .pill{
-                text-align: center;
-                font-size: 11px;
-                padding: 2px 5px;
-                border-radius: 3px;
-                &.water{
-                    background-color: #6890F0;
-                    color: #fff;
-                }
-                &.fire{
-                    background-color: #F08030;
-                    color: #fff;
-                }
-                &.grass{
-                    background-color: #78C850;
-                    color: #fff;
-                }
-                &.electric{
-                    background-color: #F8D030;
-                    color: #fff;
-                }
-                &.ice{
-                    background-color: #98D8D8;
-                    color: #fff;
-                }
-                &.fighting{
-                    background-color: #C03028;
-                    color: #fff;
-                }
-                &.poison{
-                    background-color: #A040A0;
-                    color: #fff;
-                }
-                &.ground{
-                    background-color: #E0C068;
-                    color: #fff;
-                }
-                &.flying{
-                    background-color: #A890F0;
-                    color: #fff;
-                }
-                &.psychic{
-                    background-color: #F85888;
-                    color: #fff;
-                }
-                &.bug{
-                    background-color: #A8B820;
-                    color: #fff;
-                }
-                &.rock{
-                    background-color: #B8A038;
-                    color: #fff;
-                }
-                &.ghost{
-                    background-color: #705898;
-                    color: #fff;
-                }
-                &.dragon{
-                    background-color: #7038F8;
-                    color: #fff;
-                }
-                &.dark{
-                    background-color: #705848;
-                    color: #fff;
-                }
-                &.steel{
-                    background-color: #B8B8D0;
-                    color: #fff;
-                }
-                &.fairy{
-                    background-color: #EE99AC;
-                    color: #fff;
-                }
-                &.normal{
-                    background-color: #A8A878;
-                    color: #fff;
-                }
-                &.unknown{
-                    background-color: #68A090;
-                    color: #fff;
                 }
             }
         }
@@ -215,6 +140,108 @@ body{
             display: flex;
             justify-content: center;
         }
+    }
+    .pills{
+        display: flex;
+        .pill{
+            width: 60px !important;
+            display: block;
+            text-align: center;
+            font-size: 11px;
+            padding: 3px 5px;
+            border-radius: 3px;;
+            &.water{
+                background-color: #6890F0;
+                color: #fff;
+            }
+            &.fire{
+                background-color: #F08030;
+                color: #fff;
+            }
+            &.grass{
+                background-color: #78C850;
+                color: #fff;
+            }
+            &.electric{
+                background-color: #F8D030;
+                color: #fff;
+            }
+            &.ice{
+                background-color: #98D8D8;
+                color: #fff;
+            }
+            &.fighting{
+                background-color: #C03028;
+                color: #fff;
+            }
+            &.poison{
+                background-color: #A040A0;
+                color: #fff;
+            }
+            &.ground{
+                background-color: #E0C068;
+                color: #fff;
+            }
+            &.flying{
+                background-color: #A890F0;
+                color: #fff;
+            }
+            &.psychic{
+                background-color: #F85888;
+                color: #fff;
+            }
+            &.bug{
+                background-color: #A8B820;
+                color: #fff;
+            }
+            &.rock{
+                background-color: #B8A038;
+                color: #fff;
+            }
+            &.ghost{
+                background-color: #705898;
+                color: #fff;
+            }
+            &.dragon{
+                background-color: #7038F8;
+                color: #fff;
+            }
+            &.dark{
+                background-color: #332821;
+                color: #fff;
+            }
+            &.steel{
+                background-color: #B8B8D0;
+                color: #fff;
+            }
+            &.fairy{
+                background-color: #EE99AC;
+                color: #fff;
+            }
+            &.normal{
+                background-color: #A8A878;
+                color: #fff;
+            }
+            &.unknown{
+                background-color: #68A090;
+                color: #fff;
+            }
+            &.shadow{
+                background-color: #705848;
+                color: #fff;
+            }
+        }
+    }
+    .modal{
+        .stats{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            color: white;
+            background-color: #332821;
+        }
+        
     }
 }
 
